refactor backend provider manifest
